# tidbits-memory

./: README.md  pyproject.toml
src/tidbits_memory/: __init__.py  cli.py  models.py  store.py  tools.py
src/tidbits_memory/adapters/: base.py  json_file.py  memory.py  sqlite.py
tests/: test_cli.py  test_json_adapter.py  test_models.py  test_sqlite_adapter.py  test_store_memory.py  test_tools.py
